# Sera

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  SECURITY.md  _py.rs  book.toml  build.rs  chart_ffi.rs  doc_registry.rs  lib.rs  live_stream.rs  playground-url.json  playground_server.py  seaborn_gallery_catalog.md  telemetry.rs
.github/workflows/: mdbook.yml  playground-server.yml  telemetry.yml
bindings/: alias_registry.rs  builder_template.rs  c.rs  c_data.rs  c_render.rs  cffi_bindings.rs  chart_builder.rs  chart_ffi.rs  chart_types.rs  cross_bindings.rs  doc_registry.rs  export_builder.rs  exports.rs  fast_export_c.rs  fast_render.rs  fn_registry.rs  html_export.rs  live_stream.rs  memory_pool.rs  method_registry.rs  mod.rs  model_registry.rs  python_bindings.rs  registry_macro.rs  unified_builder.rs  unified_config.rs  wasm_bindings.rs
bindings/chart_methods/: analytics.rs  apply.rs  compose.rs  extras.rs  interactive.rs  js.rs  layout.rs  methods.rs  mod.rs  overlays.rs  pages.rs  styling.rs
bindings/commands/: charts.rs  demos.rs  docs.rs  ml.rs  mod.rs  native.rs  python.rs  registry.rs
bindings/html/: assets.rs  html_export.rs  html_template.rs  mod.rs
bindings/js/: js_bindings.rs  mod.rs
bindings/python/: mod.rs  python.rs  python_ml.rs  python_registry.rs
bindings/utils/: adaptive_buf.rs  arena_alloc.rs  bitset.rs  compact_state.rs  data_processor.rs  image_processor.rs  lazy_builders.rs  memory_pool.rs  mod.rs  simd_ops.rs  state_export.rs
book/: 404.html  index.html  introduction.html  print.html  searcher-c2a407aa.js  searchindex-14391b48.js  searchindex-2299f83c.js  searchindex-f4e084c2.js  toc-66263669.js  toc-e2e8240c.js  toc-eef86151.js  toc.html
book/api/: index.html
book/config/: a11y.html  auto-display.html  automl.html  background.html  csp.html  diff.html  downsample.html  drift.html  export.html  facet.html  hover.html  ml-persistence.html  palette.html  pickle.html  streaming.html
book/getting-started/: chart-methods.html  chart-object.html  installation.html  quickstart.html
book/ml/: adaboost.html  bayes-index.html  clustering-index.html  dbscan-class.html  dbscan.html  dbscan3d.html  decision-tree.html  decomposition-index.html  decomposition.html  elastic-net.html  evaluation-index.html  gradient-boosting.html  grid-search.html  index.html  kmeans-class.html  kmeans.html  knn.html  lasso.html  linear-index.html  linear-regression.html  logistic-regression.html  metrics.html  naive-bayes.html  neighbors-index.html  preprocessing-index.html  preprocessing.html  random-forest.html  ridge.html  selection-index.html  sgd.html  svm-index.html  svm.html  train-test-split.html  tree-index.html
book/previews/: bar.html  bar3d.html  boxplot.html  bubble-map.html  bubble.html  bullet.html  candlestick.html  candlestick3d.html  dumbbell3d.html  funnel3d.html  gauge.html  grouped-bar.html  heatmap.html  histogram-overlay.html  kde.html  kde3d.html  multiline.html  parallel.html  pie3d.html  ridgeline3d.html  scatter.html  scatter3d.html  slideshow.html  stacked-bar.html  stacked-bar3d.html  violin.html  violin3d.html
book/theme/: lang-switcher.js
book/tooling/: vscode.html
canvas/: anchors.rs  mod.rs
cloud/: chunker.rs  mod.rs  planner.rs  profile.rs
core/: adaptive_exec.rs  builders.rs  dispatch.rs  hw_profile.rs  math.rs  mod.rs  telemetry.rs  types.rs
data/: conversion.rs  dataset.rs  index.rs  loader.rs  mod.rs  processor.rs
data/dframe/: attrs.rs  bigdata.rs  chartbridge.rs  combine.rs  construct.rs  derive.rs  elementwise.rs  filter.rs  groupby.rs  mask.rs  mod.rs  query.rs  reduce.rs  relational.rs  resample.rs  reshape.rs  rolling.rs  series.rs  stats.rs  tools.rs
data/table/: construct.rs  filter.rs  mod.rs  tools.rs  transform.rs
docgen/: bindings.rs  common.rs
docs/: SUMMARY.md  introduction.md  showcase.md
docs/about/: index.md  sera-framework.md  support.md
docs/api/: index.md
docs/canvas/: composition.md  dframe.md  table.md  webapp.md
docs/charts/: index.md
docs/config/: a11y.md  aliases.md  auto-display.md  automl.md  background.md  csp.md  diff.md  downsample.md  drift.md  export.md  facet.md  hover.md  index.md  ml-persistence.md  palette.md  pickle.md  streaming.md  themes.md
docs/controller_methods/: telemetry.md
docs/getting-started/: chart-methods.md  chart-object.md  index.md  installation.md  intro-seraplot.md  quickstart.md
docs/ml/: __scan_results.txt  adaboost.md  bayes-index.md  clustering-index.md  cv-splitters.md  dbscan-class.md  dbscan.md  dbscan3d.md  decision-tree.md  decomposition-index.md  decomposition.md  distributed.md  elastic-net.md  evaluation-index.md  export.md  gpu.md  gradient-boosting.md  grid-search.md  index.md  isolation-forest.md  kmeans-benchmark-openfoodfacts.md  kmeans-class.md  kmeans.md  knn.md  lasso.md  linear-index.md  (+21 more)
html/: assets.rs  fast_builders.rs  fast_exporter.rs  hover.rs  html_export.rs  html_template.rs  js_3d.rs  mod.rs
ml/: cache.rs  handle.rs  linalg.rs  mod.rs
plot/: bar.rs  builder.rs  camera.rs  canvas.rs  canvas_points.rs  chart_input.rs  containers_3d.rs  decimate.rs  family_macro.rs  generic.rs  layout.rs  line.rs  mod.rs  plot.rs  projection.rs  renderers.rs  scale_renderer.rs  scatter.rs  surface.rs  surface_builder.rs  utils.rs
python/: api.rs  charts.rs  ml.rs  mod.rs  registry.rs  root.rs  telemetry.rs
render/: interactive.rs  json.rs  mod.rs  svg.rs
scripts/: gen_index.py  gen_previews.py
seraplot-macros/: Cargo.toml
seraplot-powerbi/: README.md  capabilities.json  package-lock.json  package.json  pbiviz.json
seraplot-vscode/: seraplot-vscode-0.6.4.vsix
services/: mod.rs
telemetry/: data.csv
theme/: head.hbs
tools/: Cargo.toml
v2/: Cargo.toml  README.md  build_bindings.ps1  pyproject.toml
viewer/: cache.rs  chart.rs  gui.rs  hybrid.rs  mod.rs  plot_renderers.rs  surface_viewer.rs  viewer_3d.rs
webapp/: components.rs  http.rs  mod.rs  py.rs  registry.rs  server.rs  sha1.rs  ws.rs
wiki/: api.rs  extractor.rs  language.rs  macros.rs  metadata.rs  mod.rs
(+1614 files in other folders)
