[workspace]
members = [".", "bindings/macros"]
resolver = "2"

[package]
name = "seraplot"
version = "2.7.25"
edition = "2021"
authors = ["feur25"]
description = "Rust data visualization framework - The modern Plotly alternative"
license = "MIT"
repository = "https://github.com/feur25/seraplot"
readme = "README.md"
exclude = [
    "docs/**",
    "!docs/gen/**",
    "book/**",
    "examples/**",
    "tools/**",
    "target/**",
    "*.html",
    "*.png",
    "*.gz",
    "openfoodfacts_demo.py",
]

[lib]
name = "seraplot"
crate-type = ["rlib", "cdylib"]
path = "lib.rs"

[dependencies]
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
parking_lot = "0.12"
csv = "1.3"
egui = "0.27"
eframe = { version = "0.27", optional = true }
egui_plot = { version = "0.27", optional = true }
lazy_static = "1.4"
image = "0.24"
reqwest = { version = "0.11", features = ["stream", "blocking", "json"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
base64 = "0.22"
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
getrandom = { version = "0.2", features = ["js"], optional = true }
rayon = "1.10"
sysinfo = { version = "0.30", optional = true }
matrixmultiply = { version = "0.3", features = ["threading"] }
candle-core = { version = "0.7", optional = true, default-features = false }
seraplot-macros = { path = "bindings/macros" }
inventory = "0.3"
serde-wasm-bindgen = { version = "0.6", optional = true }
pyo3 = { version = "0.21", optional = true, features = ["extension-module", "multiple-pymethods"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
mimalloc = "0.1"

[dev-dependencies]
criterion = "0.5"

[features]
default = ["gui", "sysmon", "telemetry-http"]
gui = ["dep:eframe", "dep:egui_plot"]
js = ["dep:wasm-bindgen", "dep:js-sys", "dep:getrandom", "dep:serde-wasm-bindgen"]
ffi = []
telemetry-http = ["dep:reqwest", "dep:tokio"]
webapp = ["dep:tokio"]
sysmon = ["dep:sysinfo"]
python = ["dep:pyo3"]
gpu = ["dep:candle-core"]
cuda = ["gpu", "candle-core/cuda"]
metal = ["gpu", "candle-core/metal"]
accelerate = ["gpu", "candle-core/accelerate"]
mkl = ["gpu", "candle-core/mkl"]

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
