[package]
name = "seraplot"
version = "2.7.6"
edition = "2021"
authors = ["feur25"]
description = "Rust data visualization framework - The modern Plotly alternative"
license = "MIT"
repository = "https://github.com/feur25/seraplot"
readme = "README.md"
exclude = [
    "src/docs/**",
    "src/asset/**",
    "src/book/**",
    "book/**",
    "examples/**",
    "tools/**",
    "target/**",
    "*.html",
    "*.png",
    "*.gz",
    "openfoodfacts_demo.py",
]

[lib]
name = "seraplot"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
parking_lot = "0.12"
pyo3 = { version = "0.21", features = ["extension-module", "multiple-pymethods"], optional = true }
csv = "1.3"
egui = { version = "0.27", optional = true }
eframe = { version = "0.27", optional = true }
egui_plot = { version = "0.27", optional = true }
lazy_static = "1.4"
image = "0.24"
reqwest = { version = "0.11", features = ["stream", "blocking", "json"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
base64 = "0.22"
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
getrandom = { version = "0.2", features = ["js"], optional = true }
rayon = "1.10"
sysinfo = { version = "0.30", optional = true }
numpy = { version = "0.21", optional = true }
matrixmultiply = { version = "0.3", features = ["threading"] }
candle-core = { version = "0.7", optional = true, default-features = false }
seraplot-macros = { path = "seraplot-macros" }

[dev-dependencies]
criterion = "0.5"

[features]
default = ["python"]
python = ["dep:pyo3", "dep:numpy", "dep:egui", "dep:eframe", "dep:egui_plot", "dep:reqwest", "dep:tokio", "dep:sysinfo"]
js = ["dep:wasm-bindgen", "dep:js-sys", "dep:getrandom", "dep:egui"]
ffi = ["dep:egui"]
all = ["python"]
pyo3 = ["dep:pyo3"]
gpu = ["dep:candle-core"]
cuda = ["gpu", "candle-core/cuda"]
metal = ["gpu", "candle-core/metal"]
accelerate = ["gpu", "candle-core/accelerate"]
mkl = ["gpu", "candle-core/mkl"]

[[example]]
name = "csv_test"
path = "examples/csv_test.rs"

[[example]]
name = "csv_viewer"
path = "examples/csv_viewer.rs"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
